# cpp-protoc-initializers

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: main.cc
